Visual Cypher/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    CARET
    QUOT_MARK
    VAR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET
Rule 2     vars -> type save_type ID pushTo_varsTable vars_prime SEMICOLON vars
Rule 3     vars -> ARRAY type save_type ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
Rule 4     vars -> epsilon
Rule 5     vars_prime -> COMA ID pushTo_varsTable vars_prime
Rule 6     vars_prime -> epsilon
Rule 7     pushTo_varsTable -> epsilon
Rule 8     save_type -> epsilon
Rule 9     create_arr_info -> epsilon
Rule 10    function -> FUNCTION type ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
Rule 11    function -> FUNCTION VOID ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
Rule 12    function -> epsilon
Rule 13    pushTo_FunctionDir -> epsilon
Rule 14    pushTo_functionSignature -> epsilon
Rule 15    add_NumVars -> epsilon
Rule 16    add_Function_FirstQuadruple -> epsilon
Rule 17    main_function -> MAIN pushTo_FunctionDir OP_LPAREN OP_RPAREN fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple
Rule 18    fill_firstQuadruple -> epsilon
Rule 19    add_NumVars_Main_Global -> epsilon
Rule 20    push_end_quadruple -> epsilon
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> STRING
Rule 24    type -> BOOLEAN
Rule 25    function_parameters -> type save_type ID pushTo_varsTable function_parameters_prime
Rule 26    function_parameters -> epsilon
Rule 27    function_parameters_prime -> COMA type save_type ID pushTo_varsTable function_parameters_prime
Rule 28    function_parameters_prime -> epsilon
Rule 29    function_bloque -> LCURLY_BRACKET function_bloque_primo RCURLY_BRACKET
Rule 30    function_bloque_primo -> function_bloque_primo function_statement
Rule 31    function_bloque_primo -> epsilon
Rule 32    function_statement -> assigment
Rule 33    function_statement -> if
Rule 34    function_statement -> printer
Rule 35    function_statement -> increment
Rule 36    function_statement -> for
Rule 37    function_statement -> return
Rule 38    function_statement -> function_call
Rule 39    function_statement -> fun_esp
Rule 40    function_statement -> vars
Rule 41    function_statement -> while_loop
Rule 42    bloque -> LCURLY_BRACKET bloque_primo RCURLY_BRACKET
Rule 43    bloque_primo -> bloque_primo statement
Rule 44    bloque_primo -> epsilon
Rule 45    statement -> assigment
Rule 46    statement -> if
Rule 47    statement -> printer
Rule 48    statement -> increment
Rule 49    statement -> for
Rule 50    statement -> return
Rule 51    statement -> function_call
Rule 52    statement -> fun_esp
Rule 53    statement -> while_loop
Rule 54    assigment -> ID push_varID_to_Stack OP_EQUALS push_symbol mega_expression equals_quadruple SEMICOLON
Rule 55    assigment -> ID push_varID_to_Stack OP_LSQUARE_PAREN mega_expression OP_RSQUARE_PAREN ver_quadruples OP_EQUALS push_symbol mega_expression equals_quadruple SEMICOLON
Rule 56    ver_quadruples -> epsilon
Rule 57    equals_quadruple -> epsilon
Rule 58    if -> IF OP_LPAREN mega_expression OP_RPAREN if_gotoF_quadruple bloque fill_if_gotoF1
Rule 59    if -> IF OP_LPAREN mega_expression OP_RPAREN if_gotoF_quadruple bloque fill_if_gotoF2 if_goto_quadruple ELSE bloque fill_if_goto
Rule 60    if_gotoF_quadruple -> epsilon
Rule 61    fill_if_gotoF1 -> epsilon
Rule 62    fill_if_gotoF2 -> epsilon
Rule 63    fill_if_goto -> epsilon
Rule 64    if_goto_quadruple -> epsilon
Rule 65    printer -> PRINT OP_LPAREN impression OP_RPAREN SEMICOLON
Rule 66    impression -> mega_expression printer_quadruple
Rule 67    impression -> mega_expression printer_quadruple COMA impression
Rule 68    printer_quadruple -> epsilon
Rule 69    increment -> ID push_varID_to_Stack OP_PLUS_EQUALS push_symbol mega_expression increment_equals SEMICOLON
Rule 70    increment -> ID push_varID_to_Stack OP_MINUS_EQUALS push_symbol mega_expression increment_equals SEMICOLON
Rule 71    increment -> ID push_varID_to_Stack OP_PLUS OP_PLUS incrementByOne SEMICOLON
Rule 72    increment -> ID push_varID_to_Stack OP_MINUS OP_MINUS incrementByOne SEMICOLON
Rule 73    incrementByOne -> epsilon
Rule 74    increment_equals -> epsilon
Rule 75    for -> FOR OP_LPAREN assigment loop_jumpCount mega_expression SEMICOLON loop_gotoF increment OP_RPAREN bloque loop_fill
Rule 76    while_loop -> WHILE loop_jumpCount OP_LPAREN mega_expression OP_RPAREN loop_gotoF bloque loop_fill
Rule 77    loop_jumpCount -> epsilon
Rule 78    loop_gotoF -> epsilon
Rule 79    loop_fill -> epsilon
Rule 80    return -> RETURN mega_expression return_quadruple SEMICOLON
Rule 81    return_quadruple -> epsilon
Rule 82    function_call -> ID create_era OP_LPAREN function_call_parameters OP_RPAREN create_gosub SEMICOLON
Rule 83    function_call_parameters -> mega_expression create_param function_call_parameters_prime
Rule 84    function_call_parameters -> epsilon
Rule 85    function_call_parameters_prime -> COMA mega_expression create_param function_call_parameters_prime
Rule 86    function_call_parameters_prime -> epsilon
Rule 87    create_era -> epsilon
Rule 88    create_param -> epsilon
Rule 89    create_gosub -> epsilon
Rule 90    mega_expression -> super_expression check_symbol_megaexp
Rule 91    mega_expression -> super_expression AND push_symbol super_expression check_symbol_megaexp
Rule 92    mega_expression -> super_expression OR push_symbol super_expression check_symbol_megaexp
Rule 93    check_symbol_megaexp -> epsilon
Rule 94    super_expression -> expression check_symbol_superexp
Rule 95    super_expression -> expression OP_GREATER_THAN push_symbol expression check_symbol_superexp
Rule 96    super_expression -> expression OP_LESS_THAN push_symbol expression check_symbol_superexp
Rule 97    super_expression -> expression OP_GREATER_EQUALS_THAN push_symbol expression check_symbol_superexp
Rule 98    super_expression -> expression OP_LESS_EQUALS_THAN push_symbol expression check_symbol_superexp
Rule 99    super_expression -> expression OP_EQUALS_TWO push_symbol expression check_symbol_superexp
Rule 100   super_expression -> expression OP_NOT_EQUALS push_symbol expression check_symbol_superexp
Rule 101   check_symbol_superexp -> epsilon
Rule 102   expression -> term check_symbol_exp
Rule 103   expression -> term check_symbol_exp OP_PLUS push_symbol expression
Rule 104   expression -> term check_symbol_exp OP_MINUS push_symbol expression
Rule 105   push_symbol -> epsilon
Rule 106   check_symbol_exp -> epsilon
Rule 107   term -> fact check_symbol_term
Rule 108   term -> fact check_symbol_term OP_DIVISION push_symbol term
Rule 109   term -> fact check_symbol_term OP_TIMES push_symbol term
Rule 110   check_symbol_term -> epsilon
Rule 111   fact -> var_cte
Rule 112   fact -> OP_LPAREN push_bottle_bottom mega_expression OP_RPAREN remove_bottle_bottom
Rule 113   fact -> ID push_varID_to_Stack OP_LSQUARE_PAREN push_bottle_bottom mega_expression OP_RSQUARE_PAREN ver_quadruples remove_bottle_bottom
Rule 114   fact -> ID create_era OP_LPAREN push_bottle_bottom function_call_parameters OP_RPAREN create_gosub remove_bottle_bottom
Rule 115   push_varID_to_Stack -> epsilon
Rule 116   push_bottle_bottom -> epsilon
Rule 117   remove_bottle_bottom -> epsilon
Rule 118   var_cte -> ID push_varID_to_Stack
Rule 119   var_cte -> VAR_INT push_cte_toTable
Rule 120   var_cte -> VAR_FLOAT push_cte_toTable
Rule 121   var_cte -> VAR_STRING push_cte_toTable
Rule 122   var_cte -> VAR_BOOLEAN push_cte_toTable
Rule 123   push_cte_toTable -> epsilon
Rule 124   fun_esp -> figure_creation
Rule 125   figure_creation -> FIGURE ID OP_TWO_POINTS figure POSSESS bloque_figura
Rule 126   figure -> POINT
Rule 127   figure -> LINE
Rule 128   figure -> SQUARE
Rule 129   figure -> RECTANGLE
Rule 130   figure -> TRIANGLE
Rule 131   figure -> CIRCLE
Rule 132   figure -> ARC
Rule 133   bloque_figura -> LCURLY_BRACKET bloque_figura_primo RCURLY_BRACKET
Rule 134   bloque_figura_primo -> bloque_figura_primo figura_attr
Rule 135   bloque_figura_primo -> epsilon
Rule 136   figura_attr -> vector
Rule 137   figura_attr -> COLOR OP_TWO_POINTS ID SEMICOLON
Rule 138   figura_attr -> SIZE OP_TWO_POINTS mega_expression SEMICOLON
Rule 139   vector -> VECTOR ID OP_TWO_POINTS OP_LPAREN mega_expression COMA mega_expression OP_RPAREN SEMICOLON
Rule 140   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 91
ARC                  : 132
ARRAY                : 3
BOOLEAN              : 24
CARET                : 
CIRCLE               : 131
COLOR                : 137
COMA                 : 3 5 27 67 85 139
ELSE                 : 59
FIGURE               : 125
FLOAT                : 22
FOR                  : 75
FUNCTION             : 10 11
ID                   : 1 2 3 5 10 11 25 27 54 55 69 70 71 72 82 113 114 118 125 137 139
IF                   : 58 59
INT                  : 21
LCURLY_BRACKET       : 1 29 42 133
LINE                 : 127
MAIN                 : 17
OP_DIVISION          : 108
OP_EQUALS            : 54 55
OP_EQUALS_TWO        : 99
OP_GREATER_EQUALS_THAN : 97
OP_GREATER_THAN      : 95
OP_LESS_EQUALS_THAN  : 98
OP_LESS_THAN         : 96
OP_LPAREN            : 10 11 17 58 59 65 75 76 82 112 114 139
OP_LSQUARE_PAREN     : 3 55 113
OP_MINUS             : 72 72 104
OP_MINUS_EQUALS      : 70
OP_NOT_EQUALS        : 100
OP_PLUS              : 71 71 103
OP_PLUS_EQUALS       : 69
OP_RPAREN            : 10 11 17 58 59 65 75 76 82 112 114 139
OP_RSQUARE_PAREN     : 3 55 113
OP_TIMES             : 109
OP_TWO_POINTS        : 125 137 138 139
OR                   : 92
POINT                : 126
POSSESS              : 125
PRINT                : 65
PROGRAM              : 1
QUOT_MARK            : 
RCURLY_BRACKET       : 1 29 42 133
RECTANGLE            : 129
RETURN               : 80
SEMICOLON            : 2 3 54 55 65 69 70 71 72 75 80 82 137 138 139
SIZE                 : 138
SQUARE               : 128
STRING               : 23
TRIANGLE             : 130
VAR                  : 
VAR_BOOLEAN          : 122
VAR_FLOAT            : 120
VAR_INT              : 3 3 119
VAR_STRING           : 121
VECTOR               : 139
VOID                 : 11
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

add_Function_FirstQuadruple : 10 11
add_NumVars          : 10 11
add_NumVars_Main_Global : 1 17
assigment            : 32 45 75
bloque               : 58 59 59 75 76
bloque_figura        : 125
bloque_figura_primo  : 133 134
bloque_primo         : 42 43
check_symbol_exp     : 102 103 104
check_symbol_megaexp : 90 91 92
check_symbol_superexp : 94 95 96 97 98 99 100
check_symbol_term    : 107 108 109
create_arr_info      : 3
create_era           : 82 114
create_gosub         : 82 114
create_param         : 83 85
epsilon              : 4 6 7 8 9 12 13 14 15 16 18 19 20 26 28 31 44 56 57 60 61 62 63 64 68 73 74 77 78 79 81 84 86 87 88 89 93 101 105 106 110 115 116 117 123 135
equals_quadruple     : 54 55
expression           : 94 95 95 96 96 97 97 98 98 99 99 100 100 103 104
fact                 : 107 108 109
figura_attr          : 134
figure               : 125
figure_creation      : 124
fill_firstQuadruple  : 17
fill_if_goto         : 59
fill_if_gotoF1       : 58
fill_if_gotoF2       : 59
for                  : 36 49
fun_esp              : 39 52
function             : 1 10 11
function_bloque      : 10 11 17
function_bloque_primo : 29 30
function_call        : 38 51
function_call_parameters : 82 114
function_call_parameters_prime : 83 85
function_parameters  : 10 11
function_parameters_prime : 25 27
function_statement   : 30
if                   : 33 46
if_gotoF_quadruple   : 58 59
if_goto_quadruple    : 59
impression           : 65 67
increment            : 35 48 75
incrementByOne       : 71 72
increment_equals     : 69 70
loop_fill            : 75 76
loop_gotoF           : 75 76
loop_jumpCount       : 75 76
main_function        : 1
mega_expression      : 54 55 55 58 59 66 67 69 70 75 76 80 83 85 112 113 138 139 139
printer              : 34 47
printer_quadruple    : 66 67
program              : 0
pushTo_FunctionDir   : 10 11 17
pushTo_functionSignature : 10 11
pushTo_varsTable     : 2 3 5 25 27
push_bottle_bottom   : 112 113 114
push_cte_toTable     : 119 120 121 122
push_end_quadruple   : 17
push_symbol          : 54 55 69 70 91 92 95 96 97 98 99 100 103 104 108 109
push_varID_to_Stack  : 54 55 69 70 71 72 113 118
remove_bottle_bottom : 112 113 114
return               : 37 50
return_quadruple     : 80
save_type            : 2 3 25 27
statement            : 43
super_expression     : 90 91 91 92 92
term                 : 102 103 104 108 109
type                 : 2 3 10 25 27
var_cte              : 111
vars                 : 1 2 3 40
vars_prime           : 2 5
vector               : 136
ver_quadruples       : 55 113
while_loop           : 41 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET

    LCURLY_BRACKET  shift and go to state 4


state 4

    (1) program -> PROGRAM ID LCURLY_BRACKET . vars add_NumVars_Main_Global function main_function RCURLY_BRACKET
    (2) vars -> . type save_type ID pushTo_varsTable vars_prime SEMICOLON vars
    (3) vars -> . ARRAY type save_type ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
    (4) vars -> . epsilon
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN
    (140) epsilon -> .

    ARRAY           shift and go to state 7
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    FUNCTION        reduce using rule 140 (epsilon -> .)
    MAIN            reduce using rule 140 (epsilon -> .)

    vars                           shift and go to state 5
    type                           shift and go to state 6
    epsilon                        shift and go to state 8

state 5

    (1) program -> PROGRAM ID LCURLY_BRACKET vars . add_NumVars_Main_Global function main_function RCURLY_BRACKET
    (19) add_NumVars_Main_Global -> . epsilon
    (140) epsilon -> .

    FUNCTION        reduce using rule 140 (epsilon -> .)
    MAIN            reduce using rule 140 (epsilon -> .)

    add_NumVars_Main_Global        shift and go to state 13
    epsilon                        shift and go to state 14

state 6

    (2) vars -> type . save_type ID pushTo_varsTable vars_prime SEMICOLON vars
    (8) save_type -> . epsilon
    (140) epsilon -> .

    ID              reduce using rule 140 (epsilon -> .)

    save_type                      shift and go to state 15
    epsilon                        shift and go to state 16

state 7

    (3) vars -> ARRAY . type save_type ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12

    type                           shift and go to state 17

state 8

    (4) vars -> epsilon .

    FUNCTION        reduce using rule 4 (vars -> epsilon .)
    MAIN            reduce using rule 4 (vars -> epsilon .)
    RCURLY_BRACKET  reduce using rule 4 (vars -> epsilon .)
    ID              reduce using rule 4 (vars -> epsilon .)
    IF              reduce using rule 4 (vars -> epsilon .)
    PRINT           reduce using rule 4 (vars -> epsilon .)
    FOR             reduce using rule 4 (vars -> epsilon .)
    RETURN          reduce using rule 4 (vars -> epsilon .)
    ARRAY           reduce using rule 4 (vars -> epsilon .)
    WHILE           reduce using rule 4 (vars -> epsilon .)
    FIGURE          reduce using rule 4 (vars -> epsilon .)
    INT             reduce using rule 4 (vars -> epsilon .)
    FLOAT           reduce using rule 4 (vars -> epsilon .)
    STRING          reduce using rule 4 (vars -> epsilon .)
    BOOLEAN         reduce using rule 4 (vars -> epsilon .)


state 9

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)


state 10

    (22) type -> FLOAT .

    ID              reduce using rule 22 (type -> FLOAT .)


state 11

    (23) type -> STRING .

    ID              reduce using rule 23 (type -> STRING .)


state 12

    (24) type -> BOOLEAN .

    ID              reduce using rule 24 (type -> BOOLEAN .)


state 13

    (1) program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global . function main_function RCURLY_BRACKET
    (10) function -> . FUNCTION type ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (11) function -> . FUNCTION VOID ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (12) function -> . epsilon
    (140) epsilon -> .

    FUNCTION        shift and go to state 19
    MAIN            reduce using rule 140 (epsilon -> .)

    function                       shift and go to state 18
    epsilon                        shift and go to state 20

state 14

    (19) add_NumVars_Main_Global -> epsilon .

    FUNCTION        reduce using rule 19 (add_NumVars_Main_Global -> epsilon .)
    MAIN            reduce using rule 19 (add_NumVars_Main_Global -> epsilon .)
    RCURLY_BRACKET  reduce using rule 19 (add_NumVars_Main_Global -> epsilon .)


state 15

    (2) vars -> type save_type . ID pushTo_varsTable vars_prime SEMICOLON vars

    ID              shift and go to state 21


state 16

    (8) save_type -> epsilon .

    ID              reduce using rule 8 (save_type -> epsilon .)


state 17

    (3) vars -> ARRAY type . save_type ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
    (8) save_type -> . epsilon
    (140) epsilon -> .

    ID              reduce using rule 140 (epsilon -> .)

    save_type                      shift and go to state 22
    epsilon                        shift and go to state 16

state 18

    (1) program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function . main_function RCURLY_BRACKET
    (17) main_function -> . MAIN pushTo_FunctionDir OP_LPAREN OP_RPAREN fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple

    MAIN            shift and go to state 24

    main_function                  shift and go to state 23

state 19

    (10) function -> FUNCTION . type ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (11) function -> FUNCTION . VOID ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN

    VOID            shift and go to state 26
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12

    type                           shift and go to state 25

state 20

    (12) function -> epsilon .

    MAIN            reduce using rule 12 (function -> epsilon .)


state 21

    (2) vars -> type save_type ID . pushTo_varsTable vars_prime SEMICOLON vars
    (7) pushTo_varsTable -> . epsilon
    (140) epsilon -> .

    COMA            reduce using rule 140 (epsilon -> .)
    SEMICOLON       reduce using rule 140 (epsilon -> .)

    pushTo_varsTable               shift and go to state 27
    epsilon                        shift and go to state 28

state 22

    (3) vars -> ARRAY type save_type . ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars

    ID              shift and go to state 29


state 23

    (1) program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function . RCURLY_BRACKET

    RCURLY_BRACKET  shift and go to state 30


state 24

    (17) main_function -> MAIN . pushTo_FunctionDir OP_LPAREN OP_RPAREN fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple
    (13) pushTo_FunctionDir -> . epsilon
    (140) epsilon -> .

    OP_LPAREN       reduce using rule 140 (epsilon -> .)

    pushTo_FunctionDir             shift and go to state 31
    epsilon                        shift and go to state 32

state 25

    (10) function -> FUNCTION type . ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function

    ID              shift and go to state 33


state 26

    (11) function -> FUNCTION VOID . ID pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function

    ID              shift and go to state 34


state 27

    (2) vars -> type save_type ID pushTo_varsTable . vars_prime SEMICOLON vars
    (5) vars_prime -> . COMA ID pushTo_varsTable vars_prime
    (6) vars_prime -> . epsilon
    (140) epsilon -> .

    COMA            shift and go to state 36
    SEMICOLON       reduce using rule 140 (epsilon -> .)

    vars_prime                     shift and go to state 35
    epsilon                        shift and go to state 37

state 28

    (7) pushTo_varsTable -> epsilon .

    COMA            reduce using rule 7 (pushTo_varsTable -> epsilon .)
    SEMICOLON       reduce using rule 7 (pushTo_varsTable -> epsilon .)
    OP_LSQUARE_PAREN reduce using rule 7 (pushTo_varsTable -> epsilon .)
    OP_RPAREN       reduce using rule 7 (pushTo_varsTable -> epsilon .)


state 29

    (3) vars -> ARRAY type save_type ID . pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
    (7) pushTo_varsTable -> . epsilon
    (140) epsilon -> .

    OP_LSQUARE_PAREN reduce using rule 140 (epsilon -> .)

    pushTo_varsTable               shift and go to state 38
    epsilon                        shift and go to state 28

state 30

    (1) program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET .

    $end            reduce using rule 1 (program -> PROGRAM ID LCURLY_BRACKET vars add_NumVars_Main_Global function main_function RCURLY_BRACKET .)


state 31

    (17) main_function -> MAIN pushTo_FunctionDir . OP_LPAREN OP_RPAREN fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple

    OP_LPAREN       shift and go to state 39


state 32

    (13) pushTo_FunctionDir -> epsilon .

    OP_LPAREN       reduce using rule 13 (pushTo_FunctionDir -> epsilon .)


state 33

    (10) function -> FUNCTION type ID . pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (13) pushTo_FunctionDir -> . epsilon
    (140) epsilon -> .

    OP_LPAREN       reduce using rule 140 (epsilon -> .)

    pushTo_FunctionDir             shift and go to state 40
    epsilon                        shift and go to state 32

state 34

    (11) function -> FUNCTION VOID ID . pushTo_FunctionDir OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (13) pushTo_FunctionDir -> . epsilon
    (140) epsilon -> .

    OP_LPAREN       reduce using rule 140 (epsilon -> .)

    pushTo_FunctionDir             shift and go to state 41
    epsilon                        shift and go to state 32

state 35

    (2) vars -> type save_type ID pushTo_varsTable vars_prime . SEMICOLON vars

    SEMICOLON       shift and go to state 42


state 36

    (5) vars_prime -> COMA . ID pushTo_varsTable vars_prime

    ID              shift and go to state 43


state 37

    (6) vars_prime -> epsilon .

    SEMICOLON       reduce using rule 6 (vars_prime -> epsilon .)


state 38

    (3) vars -> ARRAY type save_type ID pushTo_varsTable . OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars

    OP_LSQUARE_PAREN shift and go to state 44


state 39

    (17) main_function -> MAIN pushTo_FunctionDir OP_LPAREN . OP_RPAREN fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple

    OP_RPAREN       shift and go to state 45


state 40

    (10) function -> FUNCTION type ID pushTo_FunctionDir . OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function

    OP_LPAREN       shift and go to state 46


state 41

    (11) function -> FUNCTION VOID ID pushTo_FunctionDir . OP_LPAREN function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function

    OP_LPAREN       shift and go to state 47


state 42

    (2) vars -> type save_type ID pushTo_varsTable vars_prime SEMICOLON . vars
    (2) vars -> . type save_type ID pushTo_varsTable vars_prime SEMICOLON vars
    (3) vars -> . ARRAY type save_type ID pushTo_varsTable OP_LSQUARE_PAREN VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars
    (4) vars -> . epsilon
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN
    (140) epsilon -> .

  ! shift/reduce conflict for ARRAY resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    ARRAY           shift and go to state 7
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    FUNCTION        reduce using rule 140 (epsilon -> .)
    MAIN            reduce using rule 140 (epsilon -> .)
    RCURLY_BRACKET  reduce using rule 140 (epsilon -> .)
    ID              reduce using rule 140 (epsilon -> .)
    IF              reduce using rule 140 (epsilon -> .)
    PRINT           reduce using rule 140 (epsilon -> .)
    FOR             reduce using rule 140 (epsilon -> .)
    RETURN          reduce using rule 140 (epsilon -> .)
    WHILE           reduce using rule 140 (epsilon -> .)
    FIGURE          reduce using rule 140 (epsilon -> .)

  ! ARRAY           [ reduce using rule 140 (epsilon -> .) ]
  ! INT             [ reduce using rule 140 (epsilon -> .) ]
  ! FLOAT           [ reduce using rule 140 (epsilon -> .) ]
  ! STRING          [ reduce using rule 140 (epsilon -> .) ]
  ! BOOLEAN         [ reduce using rule 140 (epsilon -> .) ]

    type                           shift and go to state 6
    vars                           shift and go to state 48
    epsilon                        shift and go to state 8

state 43

    (5) vars_prime -> COMA ID . pushTo_varsTable vars_prime
    (7) pushTo_varsTable -> . epsilon
    (140) epsilon -> .

    COMA            reduce using rule 140 (epsilon -> .)
    SEMICOLON       reduce using rule 140 (epsilon -> .)

    pushTo_varsTable               shift and go to state 49
    epsilon                        shift and go to state 28

state 44

    (3) vars -> ARRAY type save_type ID pushTo_varsTable OP_LSQUARE_PAREN . VAR_INT COMA VAR_INT create_arr_info OP_RSQUARE_PAREN SEMICOLON vars

    VAR_INT         shift and go to state 50


state 45

    (17) main_function -> MAIN pushTo_FunctionDir OP_LPAREN OP_RPAREN . fill_firstQuadruple function_bloque add_NumVars_Main_Global push_end_quadruple
    (18) fill_firstQuadruple -> . epsilon
    (140) epsilon -> .

    LCURLY_BRACKET  reduce using rule 140 (epsilon -> .)

    fill_firstQuadruple            shift and go to state 51
    epsilon                        shift and go to state 52

state 46

    (10) function -> FUNCTION type ID pushTo_FunctionDir OP_LPAREN . function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (25) function_parameters -> . type save_type ID pushTo_varsTable function_parameters_prime
    (26) function_parameters -> . epsilon
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN
    (140) epsilon -> .

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    OP_RPAREN       reduce using rule 140 (epsilon -> .)

    type                           shift and go to state 53
    function_parameters            shift and go to state 54
    epsilon                        shift and go to state 55

state 47

    (11) function -> FUNCTION VOID ID pushTo_FunctionDir OP_LPAREN . function_parameters OP_RPAREN add_Function_FirstQuadruple pushTo_functionSignature function_bloque add_NumVars function
    (25) function_parameters -> . type save_type ID pushTo_varsTable function_parameters_prime
    (26) function_parameters -> . epsilon
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . STRING
    (24) type -> . BOOLEAN
    (140) epsilon -> .

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    OP_RPAREN       reduce using rule 140 (epsilon -> .)

    function_parameters            shift and go to state 56
    type                           shift and go to state 53
    epsilon                        shift and go to state 55

state 48

    (2) vars -> type save_type ID pushTo_varsTable vars_prime SEMICOLON vars .
